k8s_manifests/websocket-swc-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-swc-dep
spec:
  selector:
    matchLabels:
      app: websocket-swc-kube
  replicas: 1
  template:
    metadata:
      labels:
        app: websocket-swc-kube
    spec:
      containers:
        - name: websocket-container
          image: seolbin/swc_websocket_project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1234
