k8s_manifests/boot-swc-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: boot-swc-ser
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8080
  selector:
    app: boot-swc-kube
