k8s_manifests/vue-swc-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: vue-swc-ser
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 80      # 5173에서 80으로 변경
  selector:
    app: vue-swc-kube
