k8s_manifests/websocket-swc-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: websocket-swc-ser
spec:
  type: ClusterIP
  ports:
    - port: 8002
      targetPort: 1234
  selector:
    app: websocket-swc-kube
